--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,27 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="signin_other_error">OMG!</string>
+    <string name="action_search">Action search</string>
+    <string name="action_location_found">Action location found</string>
+    <string name="action_help">Action Help</string>
+
+    <string-array name="players_array">
+        <item>Player 1</item>
+        <item>Player 2</item>
+        <item>Player 3</item>
+        <item>Player 4</item>
+        <item>Player 5</item>
+        <item>Player 6</item>
+    </string-array>
+    <string name="title_activity_new_play_desk">NewPlayDeskActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="action_exit">exit</string>
+    <string name="fight">Fight</string>
+    <string name="next_player">Next Player</string>
+    <string name="your_fightlevel">Your fightLevel is:</string>
+    <string name="monster_fightlevel">Monster fightLevel is:</string>
 </resources>
