--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
         <item>Player 5</item>
         <item>Player 6</item>
     </string-array>
-    <string name="title_activity_new_play_desk">Hier wird Name + Level stehen</string>
+    <string name="title_activity_new_play_desk"></string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
