--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,13 +44,20 @@
     <string name="monster_fightlevel">Monster fightLevel is:</string>
 
     <!-- Event messages -->
-    <string name="ev_empty"></string>
+    <string name="ev_empty"> </string>
     <string name="ev_join_player">player %string% joined the game</string>
     <string name="ev_draw_card">%player% draws %card%</string>
     <string name="ev_play_card">%player% plays %card%</string>
     <string name="ev_pickup_card">%player% picks %card% up</string>
     <string name="ev_run_away">%player% runs away</string>
     <string name="ev_fight_monster">%player% fights against the monster</string>
+    <string name="ev_enter_turn_phase">%player% %turn-phase%</string>
+
+    <!-- Turn phases -->
+    <string name="tp_kick_open_the_door">kicks open the door</string>
+    <string name="tp_look_for_trouble">looks for trouble</string>
+    <string name="tp_loot_the_room">loots the room</string>
+    <string name="tp_charity">is charitable</string>
 
     <!-- Monster cards -->
     <string name="leperchaun">Leperchaun</string>
