--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -261,8 +261,8 @@
     <string name="swiss_army_polearm_desc"></string>
     <string name="singing_dancing_sword">Singing and dancing sword</string>
     <string name="singing_dancing_sword_desc"></string>
-    <string name="boots_of_running">Boots of running really fast</string>
-    <string name="boots_of_running_desc"></string>
+    <string name="boots_of_running_really_fast">Boots of running really fast</string>
+    <string name="boots_of_running_really_fast_desc"></string>
     <string name="sandals_protection">Sandals of protection</string>
     <string name="sandals_protection_desc"></string>
     <string name="rat">Rat on the stick</string>
@@ -275,8 +275,6 @@
     <string name="sneaky_sword_desc"></string>
     <string name="broad_sword">Broad sword</string>
     <string name="broad_sword_desc"></string>
-    <string name="tuba_of_charm">Tuba of Charm</string>
-    <string name="tuba_of_charm_desc"></string>
     <string name="huge_rock">Huge rock</string>
     <string name="huge_rock_desc"></string>
     <string name="limburger_sandwich">Limburger and Anchovy sandwich</string>
@@ -285,4 +283,73 @@
     <string name="mithril_armor_desc"></string>
     <string name="stepladder">Stepladder</string>
     <string name="stepladder_desc"></string>
+
+    <string name="buckler_of_swashing">Buckler Of Swashing</string>
+    <string name="buckler_of_swashing_desc"></string>
+    <string name="flaming_armor">Flaming Armor</string>
+    <string name="flaming_armor_desc"></string>
+    <string name="bass_ass_bandana">Bass-Ass Bandana</string>
+    <string name="bass_ass_bandana_desc"></string>
+    <string name="cheese_grater_of_peace">Cheese Grater Of Peace</string>
+    <string name="cheese_grater_of_peace_desc"></string>
+    <string name="gentlemens_club">Gentlemens Club</string>
+    <string name="gentlemens_club_desc"></string>
+    <string name="short_wide_armor">Short Wide Armor</string>
+    <string name="short_wide_armor_desc"></string>
+    <string name="chainsaw_of_bloody_dismemberment">Chainsaw Of Bloody Dismemberment</string>
+    <string name="chainsaw_of_bloody_dismemberment_desc"></string>
+    <string name="pantyhose_of_giant_strength">Pantyhose Of Giant Strength</string>
+    <string name="pantyhose_of_giant_strength_desc"></string>
+    <string name="XXXXXXXXX">XXXXXXXXXX</string>
+    <string name="_desc"></string>
+    <string name="XXXXXXXXX">XXXXXXXXXX</string>
+    <string name="_desc"></string>
+    <string name="XXXXXXXXX">XXXXXXXXXX</string>
+    <string name="_desc"></string>
+    <string name="XXXXXXXXX">XXXXXXXXXX</string>
+    <string name="_desc"></string>
+    <string name="XXXXXXXXX">XXXXXXXXXX</string>
+    <string name="_desc"></string>
+    <string name="XXXXXXXXX">XXXXXXXXXX</string>
+    <string name="_desc"></string>
+
+    <string name="wishing_ring">Wishing Ring</string>
+    <string name="wishing_ring_desc"></string>
+    <string name="tuba_of_charm">Tuba Of Charm</string>
+    <string name="tuba_of_charm_desc"></string>
+    <string name="loaded_die">loaded_die</string>
+    <string name="loaded_die_desc"></string>
+    <string name="instant_wall">Instant Wall</string>
+    <string name="instant_wall_desc"></string>
+    <string name="doppelganger">Doppelganger</string>
+    <string name="doppelganger_desc"></string>
+
+    <string name="invisibility_potion">Invisibility Potion</string>
+    <string name="invisibility_potion_desc"></string>
+    <string name="friendship_potion">Friendship Potion</string>
+    <string name="friendship_potion_desc"></string>
+    <string name="pollymorph_potion">Pollymorph Potion</string>
+    <string name="pollymorph_potion_desc"></string>
+    <string name="hoard">Hoard!</string>
+    <string name="hoard_desc"></string>
+    <string name="pretty_balloons">Pretty Balloons</string>
+    <string name="pretty_balloons_desc"></string>
+    <string name="magic_missle">Magic Missle</string>
+    <string name="magic_missle_desc"></string>
+    <string name="nasty_tasting_sports_drink">Nasty Tasting Sports Drink</string>
+    <string name="nasty_tasting_sports_drink_desc"></string>
+
+    <string name="sleep_potion">Sleep Potion</string>
+    <string name="sleep_potion_desc"></string>
+    <string name="electric_radioactive_acid_potion">Electric Radioactive Acid Potion</string>
+    <string name="electric_radioactive_acid_potion_desc"></string>
+    <string name="potion_of_halitosis">Potion Of Halitosis</string>
+    <string name="potion_of_halitosis_desc"></string>
+    <string name="freezing_explosive_potion">Freezing Explosive Potion</string>
+    <string name="freezing_explosive_potion_desc"></string>
+    <string name="cotion_of_ponfusion">Cotion Of Ponfusion</string>
+    <string name="cotion_of_ponfusion_desc"></string>
+    <string name="flaming_poison_potion">Flaming Poison Potion</string>
+    <string name="flaming_poison_potion_desc"></string>
+
 </resources>
