Added all cards

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
 
       Running away: If the monster is too strong for you, you have to run away! So roll the dice. You need at least a 5 or
       higher to be successful. The Elf race gives you a +1 bonus, so you need a 4 or higher to run away. Of course, there are
-      more options that give you a bonus or penatly for running away, just read the card! If you fail to run away, bad things
+      more options that give you a bonus or penalty for running away, just read the card! If you fail to run away, bad things
       are happening. Just read the card to get further information. Afterwards you discard the monster and continue with phase 4.
 
       Inventory: Your inventory contains all cards you own. Each card is either on your hand or on the table in front of you,
