--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="action_exit">exit</string>
+    <string name="action_exit">EXIT</string>
     <string name="fight">Start combat</string>
     <string name="next_player">Next Player</string>
     <string name="your_fightlevel">Your fightLevel is:</string>
