--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,10 @@
 - Bob hat seinen Spielzug beendet!
 !!! Nun ist Alice dran!"</string>
 
+    <string name="abort_reason_player_left">Your oppponent has given up and left the game!</string>
+    <string name="abort_reason_player_disconnected">You won the match. Your opponent has lost the connection to the game</string>
+    <string name="abort_reason_lost_connection">The match is aborted, because you lost the connection to the game.</string>
+
     <string name="title_activity_sign_in">SignInActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
@@ -381,5 +385,6 @@
     <string name="cotion_of_ponfusion_desc"></string>
     <string name="flaming_poison_potion">Flaming Poison Potion</string>
     <string name="flaming_poison_potion_desc"></string>
+    <string name="won">%player% WON !</string>
 
 </resources>
